json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,57 @@
 {
  "items": [
   {
+    "id": "H9LKus3FTD2_ob1rL-oYWA",
+    "url": "https://remoteok.io/jobs/68999",
+    "title": "IOS Engineer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=22, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=19, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Fizzer",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 21, 2018 7:44:17 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>iOS Engineer</h2></span><br><span><h3>Fizzer</h3></span></td><div><div><br>About you<br><br>As an iOS Engineer, you live on the front line of our products and the features used by thousands of people every day. Working on such role is challenging yet very impactful and rewarding. You have strong design and UX sensibility, high code quality standards and you care about performances, accessibility and API design. You can translate real-world problems into elegant code solutions.<br><br>You also share our engineering values:<br><br><br>* Care bear: We want <br><br>* Transparency: We discuss everything openly.<br><br>* Move Fast: No need to demonstrate for days, just do it.<br><br>* Knowledge Sharing: We're eager to learn.<br><br>* It's OK to fail: Succeed together, learn together.<br><br><br><br><br>Responsibilities<br><br><br>* Get full ownership of the iOS app<br><br>* Join the care team and speak with our users once a week<br><br>* Participate in code reviews and provide feedback to your colleagues<br><br>* Leave code better than you found it<br><br>* Take care of your application in production: deploy, monitor, maintain<br><br>* Create a positive environment for the people around you<br><br>* Bring ideas to reality<br><br>* Lead by example<br><br>* Share knowledge with your team and help them grow<br><br><br><br><br>Requirements<br><br><br>* Fluent in french <br><br>* Minimum 2 years XP as an iOS Engineer<br><br>* Strong expertise in Swift<br><br>* Deep understanding of iOS SDK<br><br>* Experience with Realm<br><br>* Experience analyzing a feature in production using analytics and experiments<br><br>* Experience designing complex apps<br><br>* Understanding of unit and integration testing in a mobile environment<br><br><br><br><br>Benefits<br><br><br>* 100% remote: work from anywhere in the world <br><br>* A new laptop<br><br>* Fizzer credits<br><br>* Stocks<br><br>* Code and company retreats<br><br>* Annual budget for books related to work<br><br>* Travel budget (visit us when you want in our only office near the sea)<br><br><br><p>See more jobs at <span>Fizzer</span></p></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "D-zYB01EQrexsUklBMz4Zw",
     "url": "https://stackoverflow.com/jobs/203112/ios-engineer-remote-fizzer?a=167hxhqkOcHS",
     "title": "iOS Engineer (Remote) at Fizzer  ",
