--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,53 @@
 {
  "items": [
   {
+    "id": "Y_ILsNMgSh6vPUim_C-tUQ",
+    "url": "http://jobmote.com/jobs/25984-netsuite-implementation-consultant-remote-partner",
+    "title": "NetSuite Implementation Consultant - Remote - Partner",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=16, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "Anderson Frank",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 22, 2018 10:21:21 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>ERP Consultant (NetSuite)<br>Birmingham / Remote<br>£55,000</strong> </p><p><strong>The Company:</strong> </p><p>One of the most up and coming Partners within the NetSuite channel, delivering high profile, quality solutions to some of the biggest users within the UK. My client has been delivering recognised solutions a number of years and as such have won awards for the work they do delivering Netsuite solutions. The company can offer unmatched training with the Netsuite platform with true industry experts at hand to support your training and development. </p><p><strong>The Role:</strong> </p><p>As an ERP Consultant, you will work within the NetSuite team liaising with key clients within the channel and running Netsuite implementations and upgrades. There will be support from the whole team who specifically work on NetSuite to up skill you if you don't already have Netsuite based experience. I would be looking for an ERP background (Sage 200, 500, 1000, Sap B1 and Infor as examples) and aptitude as this is what you need you need to cross train effectively and will enable you to build a prosperous and progressive career. </p><p>What they're looking for; </p><ul><li><p>Hands-on experience working with NetSuite or similar ERP/Finance solution</p><ul><li>Background of working within Support/Analyst roles or working within a finance team</li><li>Accountancy qualification, A Level, AAT or similar</li><li>Strong verbal and written communication skills</li><li>Ability to work in a fast paced environment and to strict deadlines</li><li>Enthusiastic about your work</li><li>Strong SQL Skills<br></li></ul></li></ul><p>Some of the responsibilities; </p><ul><li>Full End-End ERP implementations</li><li>Providing effective 1st and 2nd line support to a large number of NetSuite users</li><li>Assisting with future software implementations and upgrades</li><li>Reviewing and updating existing NetSuite system documentation</li><li>Maintaining professional relationships with customers and clients</li></ul><p><strong>Apply today:</strong> </p><p>To apply, simply submit your CV today; . This is an urgent role and will be filled quickly. </p><p>To discuss this opportunity further in complete confidence then please send your CV to</p><p>Anderson Frank International is the leading ERP recruitment firm in the UK advertising more ERP/NetSuite roles any other agency. We deal with both NetSuite partners &amp; End Users throughout the UK and Europe and we have never had more live requirements for NetSuite professionals. By specializing solely in placing candidates in the ERP market we have built relationships with most of the key employers in the UK and have an unrivalled understanding of where the best opportunities and ERP jobs are.</p><p>Anderson Frank International Ltd is acting as an Employment Agency in relation to this vacancy.</p><p></p></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "5kdRd3RXQ8iUsLZ6kkCbwQ",
     "url": "https://www.remotejobr.com/jobs/frontend-developer-build-the-smartest-way-to-buy-a-car-full-time",
     "title": "Frontend Developer - Build the smartest way to buy a car (full time)",
@@ -3612,51 +3659,6 @@
     "published": "Aug 9, 2018 11:24:10 AM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "A great opportunity to see for yourself what a very-early-stage startup looks like from inside. <br /><br />We will be developing together the coolest project for millennials living abroad : a survival kit connected to a chatbot that welcomes people anywhere in the world!<br /><br />I need someone that can learn fast and can adapt to any situation, just like an entrepreneur does. I am the founder of KitNations, and I created a survival kit for people settling in London (and soon Paris, Montreal, LA, Singap...).<br /><br />The job will consist of:<br /><br />1. Contacting pubs, bars, restaurants all over London to create partnerships<br /><br />2. Creating some cool content and posting on Insta/Fb/Snap...<br /><br />3. Help me in many other tasks, grinding daily, and see THE REAL STARTUP LIFE from inside.<br /><br />If you always wondered what it could be like to launch your own company, bootstrap, grind, and make a cool product, join me!<br /><br />You're not afraid of pushing it to the limits and propose new ideas/learn new skills everyday? The ambience is very relaxed, but we will be grinding hard, and I will be raising a good seed in a few months, so why not hire you later on? <br /><br />I can't pay you though (not yet). Flexible hours. Looking for someone that likes things done well. <br /><br />Juste send me a DM with the skills you already have (Indesign? Photoshop? Coding? Photography? Video? I want someone that is eager to learn and multi-task). No formalities please!<br /><br />The job is in Camberwell/Brixton but you can work from home, we'll see together. <br /><br />Check what we do before you apply and if you believe in the idea, DM and tell me in a few words what you would like to bring to the concept!<br />",
-    "place1": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    },
-    "place2": {
-      "locality": "UNSET",
-      "region": "UNSET",
-      "country": "UNSET"
-    }
-  },
-  {
-    "id": "wY7GCGlNTrSsNK2PjDY2Fg",
-    "url": "http://workinstartups.com/job-board/job/71242/growth-affiliate-get-paid-to-spread-the-word-at-taskforce/",
-    "title": "Growth Affiliate - get paid to spread the word!",
-    "tags": [
-      "DBG:surround``work 2W wherev 2W you",
-      "REMOTE1/100",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "TaskForce",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "parser": "SalaryParserWithNoiseImpl",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 23, 2018 12:57:10 PM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "content": "Are you enterprising, outgoing and resourceful? Are you looking to work in the tech sector but you're not a coder? This is a great opportunity to support the launch of our exciting new app in London this summer. <br /><br />We are looking for Growth Affiliates to help spread the word and introduce us to friends, colleagues and contacts. You can work wherever suits you and put in whatever hours  you can. All we ask is that you help us sign up as many active users as possible this summer. <br /><br />We will pay you a commission based on the app usage of your sign-ups. Make money while you sleep - you will continue to earn this commission until the end of the year, even if you stop working well before then. <br /><br />Contact us if you want first hand experience of launching and growing a mobile app, developing new business, and working with tech startup in London.",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
