json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,58 @@
 {
  "items": [
   {
+    "id": "Iow-UsowTvqzERFriYIUsQ",
+    "url": "https://whereverjobs.com/listing/4116/senior-ios-engineer",
+    "title": "SENIOR iOS ENGINEER",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:artificial-intelligence/bigdata-ml/4",
+      "DBG_TECH1:k/t/w:ios/apple/22",
+      "DBG_TECH1:k/t/w:ios/mobile/22",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=38, go=0, nodejs=0, bigdata-ml=4, ruby=0, apple=30, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Sopris Health",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 23, 2018 4:02:05 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h4>SENIOR iOS ENGINEER</h4><div>Company: Sopris Health<br><br></div><div>                                <div><h2><span></span></h2></div><div><span>DESCRIPTION: Senior iOS Engineer (contract, contract-to-hire; remote)</span></div><div></div><div><br></div><div><span>ABOUT THE COMPANY</span></div><div><br></div><div><span>Sopris Health, an intelligent clinical operations platform, offers a pioneering A.I. medical scribe technology to tackle clinical inefficiencies. &nbsp;The new app, now available on iOS to U.S. physicians and healthcare providers, proved to save time for physicians and reduce the stress of dictation, while making more time available to speak with patients. &nbsp;</span></div><div></div><div><br></div><div><span>ABOUT THE TEAM</span></div><div><br></div><div><span>The Sopris Health engineering team is seeking a new member to accelerate the development of our provider facing iOS application. &nbsp;The goals of the engineering team are simple: make the highest quality, most robust, and most useful provider application in the marketplace by leveraging native applications that are driven by scalable backend infrastructure.</span></div><div></div><div><br></div><div><span>Sopris Health is an uncommon healthtech company: We have seasoned founders and an engineering and product team with decades of experience innovating in highly regulated product markets. &nbsp;Everyone on our team has a meaningful impact on product features, new directions in clinical documentation and regulation, and customer experience.</span></div><div></div><div><br></div><div><span>ABOUT YOU</span></div><div><br></div><ul><li><span>You have 3+ years of experience in native iOS development gained through shipping applications that users cannot live without</span><br><br></li><li><span>You are excited about working in a Swift-only codebase and have experience with threading, performance tuning, and iOS technologies such as Grand Central Dispatch, CoreData, and CoreAudio</span><br><br></li><li><span>You have published an application successfully to end users via the Apple App Store</span><br><br></li><li><span>You are proficient in iOS development and deployment tools like Xcode and TestFlight</span><br><br></li><li><span>You have leveraged RESTful APIs to connect iOS applications to back-end services</span><br><br></li><li><span>You have previously used, and can communicate informed opinions on, popular iOS third party libraries you will use to accelerate your development</span><br><br></li><li><span>You are familiar with modern software development including agile, unit testing, and cloud-based infrastructures</span><br><br></li><li><span>You value—and wish to contribute to—the fast and energetic environment of a software startup</span><br><br></li><li><span>You currently have or can acquire performant internet access (we’re a remote company)</span><br></li></ul><div><br></div><div><span>ABOUT THE OPPORTUNITY</span></div><div><br></div><ul><li><span>Work on an innovative iOS application that utilizes the most recent technology from Apple</span><br><br></li><li><span>Work remote to accomplish all of the above from the comfort of the workplace of your choice</span><br><br></li><li><span>Have a direct impact on the lives of our users who rely on us daily to complete their clinical documentation</span><br><br></li><li><span>Join a cross-functional team that encourages collaboration and autonomy and includes experts in AI/ML, UX, design, and scalable software systems</span><br><br></li></ul><div><span>Sopris Health is an equal opportunity employer and encourages people of all backgrounds, genders, ethnicities, abilities, and sexual orientations to apply.</span></div><div><br></div>            </div><div>How to apply:<br>Send your resume to <a href='mailto:aaron@soprishealth.com' rel='nofollow'>aaron@soprishealth.com</a></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "H9LKus3FTD2_ob1rL-oYWA",
     "url": "https://remoteok.io/jobs/68999",
     "title": "IOS Engineer",
