--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,59 @@
 {
  "items": [
   {
+    "id": "-kFL_TL2SnKpyVQF4iLIag",
+    "url": "https://remote.co/job/inpatient-coder-15/",
+    "title": "Inpatient Coder",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG_TECH1:k/t/w:classification/bigdata-ml/1",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=1, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/dotnet",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "dotnet"
+    ],
+    "hiringOrganization": {
+      "name": "UnitedHealth Group",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 23, 2018 5:57:00 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Inpatient Coder at <span>UnitedHealth Group</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Location:</strong>&nbsp;Atlanta Georgia United States</p><p><strong>Division:</strong>O360 Dignity Health Middle Ops<br><strong>Contest Number:</strong>&nbsp;760037<br><strong>Title:</strong>&nbsp;Inpatient Coder – Telecommute in the US<br><strong>Family:</strong>&nbsp;Medical and Clinical Operations<br><strong>Function:</strong>&nbsp;Medical Coding<br><strong>BusinessSegment:</strong>&nbsp;OptumInsight<br><strong>Region:</strong>&nbsp;North America<br><strong>Country:</strong>&nbsp;United States<br><strong>City:</strong>&nbsp;Atlanta<br><strong>State:</strong>&nbsp;Georgia<br><strong>EmployeeStatus:</strong>Regular<br><strong>Schedule:</strong>Full-time<br><strong>JobLevel:</strong>Individual Contributor<br><strong>Shift:</strong>Day Job<br><strong>Travel:</strong>No<br><strong>Telecommuter Position:</strong>&nbsp;Yes</p><p>Health care isn’t just changing. It’s growing more complex every day. Because of this hospitals and health care organizations continue to adapt, and we are a vital part of their evolution. If you’re looking for a better place to use your passion, your ideas and your desire to drive change, this is the place to be. It’s an opportunity to do your life’s best work.(sm)</p><p>Delivering quality care starts with ensuring our processes and documentation standards are being met and kept at the highest level possible. This means working behind the scenes ensuring a member-centric approach to care. As an Inpatient Medical Coder you will determine and record the correct medical codes for all treatments and health services.</p><p>Ensuring proper records is just one way your work will impact the health and wellness of our members on a huge scale.</p><p>Who are we? We’re Optum360. We’re a dynamic new partnership formed by Dignity Health and Optum to combine our unique expertise. As part of the growing family of UnitedHealth Group, we’ll leverage our compassion, our talent, our resources and experience to bring financial clarity and a full suite of revenue management services to health care providers nationwide.</p><p>As a Senior Medical Coder you will work remotely to accurately determine ICD-10 Codes for all procedures and diagnoses on inpatient and/or outpatient records. You will ensure that all coding assignments are accurate according to coding policies and based on the documentation provided in the medical record. Using a thorough knowledge of coding policies and procedures as well as medical terminology and technology, you will be responsible for providing documentation feedback to physicians under the direction of the Coding Operations Manager or Quality Management personnel.</p><p><strong>Youll enjoy the flexibility to telecommute* from anywhere within the U.S. as you take on some tough challenges.</strong></p><p><strong>Primary Responsibilities:</strong></p><ul><li>Identify appropriate assignment of ICD-10-CM and ICD-10-PCS Codes for inpatient services provided in a hospital setting and understand their impact on the DRG with reference to CC/MCC, while adhering to the official coding guidelines and established client coding guidelines of the assigned facility</li><li>Identify appropriate assignment of CPT and ICD-10 Codes for outpatient surgery and observation services while adhering to the official coding guidelines and established client coding guidelines of the assigned facility</li><li>Understand the Medicare Ambulatory Payment Classification (APC) codes</li><li>Abstract additional data elements during the Chart Review process when coding, as needed</li><li>Adhere to the ethical standards of coding as established by AAPC and/or AHIMA</li><li>Adhere to and maintain required levels of performance in both coding quality and productivity as established by Optum360</li><li>Provide documentation feedback to providers and query physicians when appropriate</li><li>Maintain up-to-date Coding knowledge by reviewing materials disseminated/recommended by the QM Manager, Coding Operations Managers, and Director of Coding/Quality Management, etc.</li><li>Participate in coding department meetings and educational events</li><li>Review and maintain a record of charts coded, held, and/or missing</li><li>This is a great opportunity to work from home for a Fortune 6 organization that offers career growth.</li></ul><p><strong>Required Qualifications:</strong></p><ul><li><strong>Professional coder certification with credentialing from AHIMA and/or AAPC (CCS, RHIA, RHIT, CIC, ROCC, CPC, COC, CPC-P) to be maintained annually</strong></li><li>3+ years of Inpatient medical coding experience (hospital, facility, etc.)</li><li>Experience working in a level I trauma center and/or teaching hospital with a mastery of complex procedures, major trauma ER encounters, cardiac catheterization, interventional radiology, orthopedic and neurology cases, and observation coding.</li><li>Must have ICD-10 and DRG coding experience</li><li>Ability to use a PC in a Windows environment, including MS Excel and EMR systems</li><li><strong>HS Diploma or GED</strong></li></ul><p><strong>Preferred Qualifications:</strong></p><ul><li>Experience with OSHPD reporting</li><li>Experience with various encoder systems (eCAC,3M, EPIC)</li><li>Intermediate level of experience with Microsoft Excel</li></ul><p>This is a virtual, remote, position that requires candidates to be highly organized, self-starters, well-versed in technical applications. Previous success in a remote environment is preferred. The work schedule is flexible. Typically, Sunday through Thursday or Tuesday through Saturday with set hours as established between manager and coder may require weekend and/or holiday coverage to meet business needs as well as the possibility of mandatory overtime.<br>Careers with Optum. Here’s the idea. We built an entire organization around one giant objective; make health care work better for everyone. So when it comes to how we use the world?s large accumulation of health-related information, or guide health and lifestyle choices or manage pharmacy benefits for millions, our first goal is to leap beyond the status quo and uncover new ways to serve. Optum, part of the UnitedHealth Group family of businesses, brings together some of the greatest minds and most advanced ideas on where health care has to go in order to reach its fullest potential. For you, that means working on high performance teams against sophisticated challenges that matter. Optum, incredible ideas in one incredible company and a singular opportunity to do your life’s best work.(sm)</p><p>*All Telecommuters will be required to adhere to UnitedHealth Groups Telecommuter Policy<br>Diversity creates a healthier atmosphere: UnitedHealth Group is an Equal Employment Opportunity/Affirmative Action employer and all qualified applicants will receive consideration for employment without regard to race, color, religion, sex, age, national origin, protected veteran status, disability status, sexual orientation, gender identity or expression, marital status, genetic information, or any other characteristic protected by law.UnitedHealth Group is a drug-free workplace. Candidates are required to pass a drug test before beginning employment.</p><p>Job Keywords: Inpatient Coder, facility, hospital, DRG, ICD-10, RHIA, RHIT, CCS,CIC, COC, US, telecommute, telecommuter, virtual</p>        </div><div>        <a href='https://careers.unitedhealthgroup.com/data/jobs/medical-clinical-operations/760037-inpatient-coder-telecommute-in-the-us?utm_source=remote.co' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Y_ILsNMgSh6vPUim_C-tUQ",
     "url": "http://jobmote.com/jobs/25984-netsuite-implementation-consultant-remote-partner",
     "title": "NetSuite Implementation Consultant - Remote - Partner",
