json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,67 @@
 {
  "items": [
   {
+    "id": "_9WxwmxESdW6QaktPvMLfw",
+    "url": "https://remote.co/job/staff-ios-engineer/",
+    "title": "Staff iOS Engineer",
+    "tags": [
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``OR(work,countri,locat,contract,base,you W can) 2W anywher",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:express/nodejs/8",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:iphone/apple/2",
+      "DBG_TECH1:k/t/w:iphone/mobile/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=7, mobile=28, go=0, nodejs=8, bigdata-ml=0, ruby=0, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Instacart",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 24, 2018 5:54:36 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Staff iOS Engineer at <span>Instacart</span></h2><div><span><i></i> Remote</span>        </div><div>            <p>at Instacart</p><p>Instacart is building the best way for people anywhere in the world to shop for groceries. Since Instacart started in 2012, we’ve launched same-day delivery in 200 US markets. We are laser focused on delivering groceries from your favorite stores right to your door. We now cover over 60% of US households and aim to have 80% coverage by the end 2018that’s 90 million households! From a technology point of view, the platform is complex, rapidly scaling and processing millions of transactions in real-time all of the time. Our technology coupled with operational expertise enables Instacart to deliver fresh groceries in as little as an hour. This is a difficult problem to master and we are making it happen. Every day, we solve incredibly hard problems to create an experience for our customers that is absolutely magical.</p><p><strong>Location: Anywhere in the US / North America</strong></p><p><strong>Responsibilities</strong></p><ul><li>Executing a variety of projects to extend and enhance our Instacart application for iPhone and iPad</li><li>Building new features to create an experience nothing short of magical</li></ul><p><strong>Requirements</strong></p><ul><li><strong>Bachelor’s degree in computer science is preferred with 5+ years of software development experience and at least 4 years of iOS app development experience</strong></li><li>Very strong development skills in Swift, Objective C, iOS SDK, and good general programming and algorithm skills</li><li>Superior analytical skills and a strong sense of urgency</li><li>Proven customer facing application development, troubleshooting, deployment and application performance tuning experience</li><li>Proven ability to build, launch and iterate on apps under pressure</li><li>A strong sense of ownership, ability to work independently and proven track record of driving products</li><li>Previous experience working remote or leading a distributed team is required</li></ul><p><strong>Benefits</strong></p><ul><li>Talented and collaborative coworkers who will both push and support you</li><li>Market competitive salary, equity</li><li>Medical, dental, vision benefits and 401(k) retirement plan</li><li>Take what you need vacation (and we really mean it)</li><li>16 weeks maternity leave / 8 weeks paternity leave so you can truly bond with your child</li><li>Complimentary Instacart express membership</li></ul>        </div><div>        <a href='https://boards.greenhouse.io/instacart/jobs/1235321' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Iow-UsowTvqzERFriYIUsQ",
     "url": "https://whereverjobs.com/listing/4116/senior-ios-engineer",
     "title": "SENIOR iOS ENGINEER",
