--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,54 @@
 {
  "items": [
   {
+    "id": "lUTbltIlQy-_nF5fAfc92Q",
+    "url": "https://weworkremotely.com/remote-jobs/the-vaan-group-e-commerce-producer",
+    "title": "The Vaan Group: E-Commerce Producer",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:facet/nodejs/8",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=8, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/nodejs",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "nodejs"
+    ],
+    "hiringOrganization": {
+      "name": "The Vaan Group",
+      "sameAs": "http://vaangroup.com/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 23, 2018 11:17:42 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>E-Commerce Producer</h2><span>Company: The Vaan Group<br></span><span>Headquarters: New York City<br></span><span>http://vaangroup.com/<br><br></span><div><div><span></span></div><div><span>Hi there! Let's make this personal. My name is Xavier Armand and I am the co-founder and creative director of The Vaan Group (www.vaangroup.com): a remote UX design and engineering agency with headquarters in NYC. We’re looking to hire an e-commerce producer to join our team.</span></div><div><br></div><div><span>Our clients range from large e-commerce enterprises (&gt;$100M per year) to successful mid-stage ($1M - $50M per year) direct to consumer e-commerce brands (these are the brands you’d be working with). You can see the full range client work/portfolio at our website and here are some long form articles that explain the details of some recent projects: </span><span><a href='https://medium.com/@x_armand/e-commerce-search-destroy-a72ab421f55a' rel='nofollow'>E-commerce search (&amp; destroy)</a>&nbsp;</span><span>(https://medium.com/@x_armand/e-commerce-search-destroy-a72ab421f55a) as well as UX Audit Reports: Putting Beauty In The Eye of the User (https://goo.gl/b7TKYT)</span></div><div><br></div><div><span>We’re a realistic group, not looking for rockstar ninja wizards. Our team resides (or is working from) New York City, Warsaw, Berlin, Rijeka, Sevilla, London, and Norway. Every 3-4 months we have team meet ups.</span></div><div><br></div><div><span>A perfect candidate has well-formed opinions, great discipline, naturally established work habits, and takes delight in their work. They're interested in online retail and are comfortable learning technical information. E-commerce experience needed and Shopify experience a huge plus!</span></div><div><br></div><div><span>Example responsibilities include:</span></div><div><br></div><div><span>- Setting weekly check-ins with clients to update them on progress</span><br></div><div><span>- Research and determine solutions (custom or off the shelf app) for client needs.</span><br></div><div><span>- Track, assess and prioritize tasks for the dev team in Basecamp</span><br></div><div><span>- Review and approve tasks by dev team</span><br></div><div><span>- Stay up to date on the latest features and offerings from our app partners</span><br></div><div><span>- Manage app partner relationships. An example would be to be the go between for our agency and ReCharge - a subscription platform we work with.</span><br></div><div><span>- Communicate with and manage projects for up to 3 developers</span><br></div><div><span>- Problem solve using design or feature solutions to UX and dev team</span><br></div><div><span>- Field incoming inquiries, assess project size and delegate for small projects</span><br></div><div><span>- When necessary interacting and finalizing tasks for clients</span></div><div><br></div><div><span>Where the job will grow</span></div><div><br></div><div><span>We’re a small (10-person) and nimble agency. You’ll likely work with everyone on the team but you’ll most closely be working directly with our head of engineering and founding team. This is both an internal and external facing roll where you can learn a lot about multiple facets of running and scaling and online shop. You'll be learning, broadly, solutions architecture, getting comfortable with multiple app vendors, thinking through custom solutions using with APIs, and participating in brainstorms on how we come up with creative solutions for clients needs, and, in the process, see where the future of online commerce is going. With this experience, we're optimistic this person can grow into our head of client services. </span></div><div><br></div><div><span>We are a mostly remote team so we value good writers who feel comfortable writing detail explanations of features and asks internally and detailed explanations externally. We rely on Slack and Basecamp for project management. Happy to work remote but as this is a client-facing roll, our preference is for North/South America or those in Europe willing to shift their schedule by about 3-4 hours. Nomads welcome.</span></div><div><br></div><div><span><br></span></div></div><div><h4>Apply for this position</h4><p>Email resume, LinkedIn and a cover letter explaining your experience to: <a href='mailto:info@vaangroup.com' rel='nofollow'>info@vaangroup.com</a></p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "-kFL_TL2SnKpyVQF4iLIag",
     "url": "https://remote.co/job/inpatient-coder-15/",
     "title": "Inpatient Coder",
