--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://remote4me.com/
+production_url : https://remote4me.com
 
 plugins:
   - jekyll-sitemap
